@@ -5,7 +5,6 @@ Results
   - Make packagename column persistent when scrolling horizontally
 
 Workers
-  - View running build logs
   - Color-coded job time column 
   - Option to only see builds for watched projects
   - Show number of all and watched packages in the wait queue
