@@ -7,6 +7,7 @@ SVN
     them in the project list
   * Rebuilds can now be triggered directly in the result view by right clicking
     on the package, or a specific result
+  * Can now view running build logs in the worker tab
 
 0.7 - Mar 13 2008
   * Views can be exported to text files. Patch from Michal Vyskocil
